<resources>
    <string name="app_name">chalangeChapterFour</string>
    <string name="txt_jdl_batu">Batu</string>
    <string name="txt_jdl_gunting">Gunting</string>
    <string name="txt_jdl_kertas">Kertas</string>
    <string name="ply_com">COM</string>
    <string name="ply_user">Pemain 1</string>
    <string name="batu">Batu</string>

    <string name="vs">VS</string>
    <string name="draw">Draw</string>
    <string name="comwin">Komputer Menang</string>
    <string name="pemainmenang">Pemain Menang</string>
    <string name="gunting">Gunting</string>
    <string name="kertas">Kertas</string>
    <string name="ctnrefresh">refresh</string>

</resources>